--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -67,6 +67,12 @@
 				android:layout_height="match_parent"
 				android:layout_weight="1"
 			/>
+			<TextView
+				android:layout_width="0dp"
+				android:layout_height="match_parent"
+				android:layout_weight="1"
+				android:text="@string/selector"
+			/>
 	    </LinearLayout>
 		 
 		<View
